# kuikly-template

./: ART_EXHIBITION_SYSTEM.md  README.md  build.gradle.kts  build.ohos.gradle.kts  gradle.properties  settings.gradle.kts
.kotlin/metadata/kotlinTransformedMetadataLibraries/: com.tencent.kuikly-open-core-2.1.1-2.0.21-commonMain-9Va6jA.klib  com.tencent.kuikly-open-core-annotations-2.1.1-2.0.21-commonMain-8Hd-3g.klib
androidApp/release/: androidApp-release.apk  output-metadata.json
buildSrc/src/main/java/: KotlinBuildVar.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: File.txt  Podfile  iosApp-Bridging-Header.h
iosApp-copy-save/iosApp/: ContentView.swift
iosApp/iosApp/: Info.plist
iosApp/iosApp/KuiklyExpand/: KuiklyRenderViewController.m
ohosApp/: build-profile.json5  runOhosApp.sh
ohosApp/entry/: build-profile.json5  oh-package-lock.json5
shared/: build.gradle-android.kts  build.gradle.kts  build.ohos.gradle.kts  shared.podspec
多端测试-留存版本代码-8.8/kuiklytestproject/: .gitignore  gradle.properties  settings.ohos.gradle.kts
多端测试-留存版本代码-8.8/kuiklytestproject/.run/: ohosApp.run.xml
多端测试-留存版本代码-8.8/kuiklytestproject/androidApp/: build.gradle.kts
多端测试-留存版本代码-8.8/kuiklytestproject/iosApp-copy-save/: iosApp-Bridging-Header.h
多端测试-留存版本代码-8.8/kuiklytestproject/ohosApp/: .gitignore  build-profile.json5  oh-package-lock.json5  oh-package.json5
多端测试-留存版本代码-8.8/kuiklytestproject/ohosApp/entry/src/main/cpp/: CMakeLists.txt
多端测试-留存版本代码-8.8/kuiklytestproject/ohosApp/entry/src/main/cpp/types/libentry/: index.d.ts
(+71 files in other folders)
